--- a/Main/BackEnd/SIngupAPI/SIngupAPI/src/main/resources/application.properties
+++ b/Main/BackEnd/SIngupAPI/SIngupAPI/src/main/resources/application.properties
@@ -1,17 +1,19 @@
-#
-#spring.datasource.url=jdbc:mysql://192.168.1.16:3306/Zomato
-#spring.datasource.username=root
-#spring.datasource.password=Topgear@174
-#
-#
+server.port = 1010
+spring.datasource.url=jdbc:mysql://localhost:3306/zomatoApp
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
-spring.datasource.url=jdbc:h2:~/Zomato
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:h2:~/Zomato
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
